Closed
Bug 256331
Opened 21 years ago
Closed 21 years ago
nsMsgFilterDataSource doesn't inherit properly from nsMsgRDFDataSource
Categories
(MailNews Core :: Filters, defect)
MailNews Core
Filters
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: neil, Assigned: neil)
Details
Attachments
(1 file)
|
1.29 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
nsMsgFilterDataSource has its own nsISupports implementation instead of
inheriting from nsMsgRDFDataSource. This means that opening the filter list
dialog generates the following assertion: ###!!! ASSERTION: AddObserver: trying
weak object that doesn't support nsIWeakReference: 'weakRefFactory', file
c:/mozilla/xpcom/ds/nsObserverList.cpp, line 79
| Assignee | ||
Comment 1•21 years ago
|
||
Assignee: sspitzer → neil.parkwaycc.co.uk
Status: NEW → ASSIGNED
| Assignee | ||
Updated•21 years ago
|
Attachment #156628 -
Flags: superreview?(bienvenu)
Attachment #156628 -
Flags: review?(bienvenu)
Updated•21 years ago
|
Attachment #156628 -
Flags: superreview?(bienvenu)
Attachment #156628 -
Flags: superreview+
Attachment #156628 -
Flags: review?(bienvenu)
Attachment #156628 -
Flags: review+
| Assignee | ||
Comment 2•21 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•