Bug 256331 nsMsgFilterDataSource doesn't inherit properly from nsMsgRDFDataSource r+sr=bienvenu